# policy-core

./: .gitignore  ARCHITECT.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DESIGN_PHILOSOPHY.md  DESIGN_RATIONALE.md  LICENSE  README.md  SECURITY.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
.github/workflows/: ci.yml  release.yml
dylint/: Cargo.toml  README.md
dylint/lints/enforcement_pack/: Cargo.toml
dylint/lints/enforcement_pack/src/: lib.rs
dylint/lints/enforcement_pack/tests/: integration_test.rs
dylint/lints/enforcement_pack/ui-tests/: no_println.rs  no_println.stderr
examples/: audit_trail.rs  basic_taint_flow.rs  policy_gate_validation.rs  secret_redaction.rs  web_request_flow.rs
proptest-regressions/: sanitizer.txt
src/: audit.rs  capability.rs  context.rs  demo.rs  error.rs  gate.rs  http.rs  lib.rs  logging.rs  policy.rs  request.rs  sanitizer.rs  secret.rs  sink.rs  state.rs  tainted.rs  verified.rs
src/audit/: capability.rs  event.rs  policy_audit.rs  trail.rs
src/web/: adapter.rs  example_handler.rs  extract.rs  middleware.rs  mod.rs
tests/: integration_test.rs  property_tests.proptest-regressions  property_tests.rs  web_integration_test.rs
