[package]
name = "policy-core"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Compile-time policy enforcement and taint tracking framework for Rust"
repository = "https://github.com/camadkins/policy-core"
homepage = "https://github.com/camadkins/policy-core"
documentation = "https://docs.rs/policy-core"
readme = "README.md"
keywords = ["security", "policy", "taint", "capabilities", "enforcement"]
categories = ["authentication", "development-tools", "rust-patterns"]
exclude = [
    "*.local.md",
    ".claude/",
    "proptest-regressions/",
    "AUDIT.local.md",
]

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
tracing = "0.1"

[dev-dependencies]
tracing-subscriber = "0.3"
proptest = "1.5"

[workspace.metadata.dylint]
libraries = [
    { path = "dylint/lints/*" },
]