[package]
name = "policy-core"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Compile-time policy enforcement and taint tracking framework for Rust"
repository = "https://github.com/camadkins/policy-core"
homepage = "https://github.com/camadkins/policy-core"
documentation = "https://docs.rs/policy-core"
readme = "README.md"
keywords = ["security", "policy", "taint", "capabilities", "enforcement"]
categories = ["authentication", "development-tools", "rust-patterns"]
exclude = [
    "*.local.md",
    ".claude/",
    "proptest-regressions/",
    "AUDIT.local.md",
    ".github/",
    "ARCHITECTURE.md",
    "DESIGN_PHILOSOPHY.md",
    "DESIGN_RATIONALE.md",
    "CODE_OF_CONDUCT.md",
    "CONTRIBUTING.md",
]

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
tracing = "0.1"

[dev-dependencies]
tracing-subscriber = "0.3"
proptest = "1.5"

[workspace.metadata.dylint]
libraries = [
    { path = "dylint/lints/*" },
]

# Development profile - optimized for fast iteration
[profile.dev]
opt-level = 0          # No optimization
debug = 1              # Line tables only (not full debug info) - 20-30% faster builds
split-debuginfo = "unpacked"  # Supported on macOS and ELF targets (Linux); not supported on Windows
incremental = true     # Enable incremental compilation

# Test profile - optimized for fast test runs
[profile.test]
opt-level = 0
debug = 1
split-debuginfo = "unpacked"  # Supported on macOS and ELF targets (Linux); not supported on Windows
incremental = true

# Release profile - optimized for performance
[profile.release]
opt-level = 3          # Full optimizations
debug = false
lto = "thin"           # Thin LTO for balance
codegen-units = 16     # Parallel codegen
strip = true           # Strip symbols

# Custom profile for development with some optimization
[profile.dev-opt]
inherits = "dev"
opt-level = 1          # Minimal optimization for faster runtime during dev